fix: fixed overflow issues when resizing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-  @apply min-h-screen overflow-auto;
+  @apply min-h-screen overflow-x-hidden overflow-y-auto;
 }
 
 @media print {
